cluster/redirect/discord_redirect_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: https://discord.com/invite/login-ntnu
  name: discord-redirect-ingress
  namespace: redirect-namespace
spec:
  ingressClassName: nginx-ntnu
  tls:
    - hosts:
        - test-discord.login.no
  rules:
    - host: test-discord.login.no
