cluster/redirect/usb_redirect_ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    nginx.ingress.kubernetes.io/permanent-redirect: https://shop.tpgo.no/#/?countryCode=NO&companyIdent=811940372
  name: usb-redirect-ingress
  namespace: redirect-namespace
spec:
  ingressClassName: nginx-ntnu
  tls:
    - hosts:
        - test-usb.login.no
  rules:
    - host: test-usb.login.no
